# ChronoManager

./: .gitignore  README.md  package-lock.json  package.json
Todo/: index.html  scripts.js  styles.css
public/: index.html
public/css/: styles.css
public/js/: app.js  searchManager.js  updateManager.js
src-tauri/: Cargo.toml  tauri.conf.json
src/database/: attendance.db  mod.rs
src/server/: app.js  config.js  server.js
src/server/routes/: attendance.js  biotime.js  search.js  updates.js  users.js
src/server/services/: attendancePoller.js  biotimeService.js  searchService.js  smsService.js  updateService.js
src/server/utils/: logger.js
