[package]
name = "chrono-manager"
version = "1.0.0"
description = "Cross-platform attendance management system"
authors = ["Kasim Lyee"]
license = "MIT"

[dependencies]
tauri = { version = "1.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
simple_logger = "2.1.0"
rusqlite = "0.28.0"
chrono = "0.4"